services/radarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: radarr
  namespace: default
  labels:
    app: radarr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: radarr
  template:
    metadata:
      labels:
        app: radarr
    spec:
      containers:
        - image: lscr.io/linuxserver/radarr:latest
          imagePullPolicy: Always
          name: radarr
          resources: {}
          ports:
            - name: radarr
              containerPort: 7878
          livenessProbe:
            httpGet:
              path: /
              port: radarr
            initialDelaySeconds: 60
            periodSeconds: 20
          volumeMounts:
            - name: host-disk1
              mountPath: /config
              subPath: radarr
            - name: nfs-vol-disk2
              mountPath: /disk2
            - name: nfs-vol-disk3
              mountPath: /disk3
      volumes:
        - name: host-disk1
          hostPath:
            path: /disk1
        - name: nfs-vol-disk2
          nfs:
            server: 192.168.1.2
            path: /disk2
        - name: nfs-vol-disk3
          nfs:
            server: 192.168.1.2
            path: /disk3
      restartPolicy: Always
status: {}
